# inverted_multi_index

./: CMakeLists.txt  MultiIndex.sln  README.md
MultiIndex/: InvertedMultiIndex.cpp  InvertedMultiIndex.h  InvertedMultiIndexBuilder.cpp  Main.cpp  MultiIndex.vcxproj  MultiIndex.vcxproj.filters  MultiIndexUtil.h  MultiSequenceAlgorithm.cpp  MultiSequenceAlgorithm.h  MultiSequenceAlgorithmClass.cpp  MultiSequenceAlgorithmD.cpp  PriorityTuple.h  build_and_copy.bat  common.h  inverted_multi_index.cp35-win_amd64.pyd  inverted_multi_index.pyx  multi_sequence_algorithm.pyx  nearest_search.py  nearest_search3.py  quantizers.py  setup.py  test_PyMultiIndexSearcher.py
python_wrap/: c_inverted_multi_index.pxd  py_inverted_multi_index.cp35-win_amd64.pyd  py_inverted_multi_index.cpp  py_inverted_multi_index.pxd  py_inverted_multi_index.pyx  py_inverted_multi_index_common.pxd  py_multi_index_util.pyx  setup.py
python_wrap/distance/adc/: py_asymmetric_distance_computer.pyx  run_setup.bat  setup.py
python_wrap/distance/sdc/: py_symmetric_distance_computer.pyx  run_setup.bat  setup.py
python_wrap/inverted_multi_index/: c_inverted_multi_index.pxd  py_inverted_multi_index.pxd  py_inverted_multi_index.pyx  py_multi_index_util.pyx  run_setup.bat  setup.py
python_wrap/search/: py_nearest_indices_searcher.pyx  run_setup.bat  setup.py
python_wrap/test/: test-InvertedMultiIndexBuilder.py  test-InvertedMultiIndexSearcher.py
src/distance/: AsymmetricDistanceComputer.h  EuclideanDistanceComputer.h  SubspacesProductEuclideanDistanceComputer.h  SymmetricDistanceComputer.h
src/multiindex/: InvertedMultiIndex.h  InvertedMultiIndexBuilder.h  InvertedMultiIndexSearcher.h  MultiIndexUtil.h  MultiIndexUtil2.h  MultiSequenceAlgorithm.h  test1.cpp
src/search/: NearestIndicesSearcher.h  SubspacesProductNearestIndicesSearcher.h
src/util/: PriorityTuple.h  SubspacedScalars.h  SubspacedVector.h  SubspacedVectors.h  Vectors.h  array_utils.h  cblas_wraps.h  common_defs.h
test/: tests-main.cpp
test/distance/: tests-AsymmetricDistanceComputer.cpp  tests-EuclideanDistanceComputer.cpp  tests-SubspacesProductEuclideanDistanceComputer.cpp  tests-SymmetricDistanceComputer.cpp
test/multiindex/: tests-InvertedMultiIndexBuilder.cpp  tests-MultiIndexUtil.cpp  tests-MultiSequenceAlgorithm.cpp
test/search/: tests-InvertedMultiIndexSearcher.cpp  tests-NearestIndicesSearcher.cpp  tests-SubspacesProductNearestIndicesSearcher.cpp  tests-glcm-issue.cpp
